update readme with some quick notes